@@ -1,4 +1,4 @@
-/* $Id: physfsx.h,v 1.1.2.2 2003-05-17 10:30:06 btb Exp $ */
+/* $Id: physfsx.h,v 1.1.2.3 2003-05-22 07:38:50 btb Exp $ */
 
 /*
  *
@@ -9,6 +9,7 @@
 #ifndef PHYSFSX_H
 #define PHYSFSX_H
 
+#include <sys/param.h>
 #include <physfs.h>
 
 #define PHYSFSX_readU8(file, val) PHYSFS_read(file, val, 1, 1)
@@ -54,6 +55,15 @@ static inline int PHYSFSX_writeString(PHYSFS_file *file, char *s)
 static inline int PHYSFSX_puts(PHYSFS_file *file, char *s)
 {
 	return PHYSFS_write(file, s, 1, strlen(s));
+}
+
+static inline int PHYSFSX_rename(char *oldpath, char *newpath)
+{
+	char old[PATH_MAX], new[PATH_MAX];
+
+	snprintf(old, PATH_MAX, "%s/%s", PHYSFS_getWriteDir(), oldpath);
+	snprintf(new, PATH_MAX, "%s/%s", PHYSFS_getWriteDir(), newpath);
+	return (rename(old, new) == 0);
 }
 
 #endif /* PHYSFSX_H */
